<resources>
    <string name="app_name">TP3</string>
    <string name="TvNoItems">Empty list !\n</string>
    <string name="lblCategory">Domain\n</string>
    <string name="lblTitle">First Name\n</string>
    <string name="lblDate">Date of birth\n</string>
    <string name="nationality">Nationality\n</string>
    <string name="btnSave">Save\n</string>
    <string name="btnCancel">Cancel\n</string>
    <string name="lblLastName">Last name\n</string>
</resources>